# backend-chat

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  back_chat.configuration.html  back_chat.define_api.html  back_chat.descriptors.html  back_chat.exceptions.html  back_chat.html  back_chat.middleware.html  back_chat.models.html  back_chat.routes.html  back_chat.services.html  back_chat.utils.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sonar-project.properties  vercel.json
.github/workflows/: docker-publish.yml  docs.yml  publish-pypi.yml  release.yml  sonar.yml
_modules/: index.html
_modules/back_chat/: define_api.html
_modules/back_chat/descriptors/: message.html
_modules/back_chat/exceptions/: error_response.html
_modules/back_chat/middleware/: auth.html  auth_websocket.html
_modules/back_chat/models/: orm.html  schemas.html
_modules/back_chat/routes/: api_routes.html  streaming_routes.html  v1_routes.html
_modules/back_chat/services/: connection_manager.html  rabbitmq_manager.html
_modules/back_chat/utils/: functions.html  logger_api.html
_sources/: back_chat.configuration.rst.txt  back_chat.descriptors.rst.txt  back_chat.middleware.rst.txt  back_chat.routes.rst.txt  back_chat.rst.txt  back_chat.services.rst.txt  back_chat.utils.rst.txt  index.rst.txt
back_chat/: configuration.py  define_api.py
back_chat/exceptions/: __init__.py
back_chat/middleware/: auth.py
back_chat/models/: __init__.py  schemas.py
back_chat/routes/: __init__.py  api_routes.py
back_chat/utils/: functions.py
conf/: config.cfg
docker/: Dockerfile  docker-compose.yml
docs/source/: back_chat.configuration.rst  back_chat.define_api.rst  back_chat.descriptors.rst  back_chat.exceptions.rst  back_chat.middleware.rst  back_chat.models.rst  back_chat.routes.rst  back_chat.rst  back_chat.services.rst  back_chat.utils.rst  conf.py  index.rst  modules.rst
src/: __main__.py
src/back-chat/middleware/: auth.py
src/back-chat/models/: orm.py
src/back-chat/models/schemas/: __init__.py  schemas.py
src/back-chat/routes/: api_routes.py  streaming_routes.py  v1_routes.py
src/back-chat/services/: connection_manager.py  rabbitmq_manager.py
src/back-chat/utils/: logger_api.py
src/back_chat/: __init__.py  configuration.py  define_api.py
src/back_chat/descriptors/: __init__.py  message.py
src/back_chat/exceptions/: __init__.py  error_response.py
src/back_chat/middleware/: __init__.py  auth.py  auth_websocket.py
src/back_chat/models/: __init__.py  orm.py  schemas.py
src/back_chat/routes/: __init__.py  streaming_routes.py  v1_routes.py
src/back_chat/services/: __init__.py  connection_manager.py  rabbitmq_manager.py
src/back_chat/utils/: __init__.py  functions.py  logger_api.py
src/conf/: config.cfg
